src/tests/parser/expr_parser/snapshots/kasl__tests__parser__expr_parser__identifier_parser__parse_single_identifier.snap
---
source: src/tests/parser/expr_parser/identifier_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 15,
        },
        kind: GlobalConst {
            name: "value",
            value_type: None,
            def_val: [
                ExprToken {
                    range: Range {
                        start: 12,
                        end: 15,
                    },
                    kind: Identifier(
                        "num",
                    ),
                },
            ],
        },
    },
]
